RESOLVED FIXED93159
[chromium] Fix Renderer4.CompositorThreadImplDrawDelay histogram.
https://bugs.webkit.org/show_bug.cgi?id=93159
Summary [chromium] Fix Renderer4.CompositorThreadImplDrawDelay histogram.
Dave Tu
Reported 2012-08-03 14:28:21 PDT
[chromium] Fix Renderer4.CompositorThreadImplDrawDelay histogram.
Attachments
Patch (2.29 KB, patch)
2012-08-03 14:35 PDT, Dave Tu
no flags
Dave Tu
Comment 1 2012-08-03 14:35:37 PDT
Adrienne Walker
Comment 2 2012-08-03 15:03:47 PDT
Comment on attachment 156461 [details] Patch R=me.
WebKit Review Bot
Comment 3 2012-08-03 17:40:17 PDT
Comment on attachment 156461 [details] Patch Clearing flags on attachment: 156461 Committed r124677: <http://trac.webkit.org/changeset/124677>
WebKit Review Bot
Comment 4 2012-08-03 17:40:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.