[chromium] Fix Renderer4.CompositorThreadImplDrawDelay histogram. https://bugs.webkit.org/show_bug.cgi?id=93159

Patch by Dave Tu <dtu@chromium.org> on 2012-08-03
Reviewed by Adrienne Walker.

The histogram is using the frame number instead of the frame time by mistake.

* platform/graphics/chromium/cc/CCFrameRateCounter.cpp:
(WebCore::CCFrameRateCounter::markBeginningOfFrame):

Canonical link: https://commits.webkit.org/111016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124677 268f45cc-cd09-0410-ab3c-d52691b4dbfc